--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,21 +6,55 @@
   <br>
   <img width="300" alt="Angular Logo" src="./assets/fuego.jpg">
 </div>
+<ng4-loading-spinner> </ng4-loading-spinner>
 
 <br>
-<!--h2>Here are some links to help you start: </h2>
-<br>
-<ul>
-  <li>
-    <h2><a target="_blank" rel="noopener" href="https://angular.io/tutorial">Tour of Heroes</a></h2>
-  </li>
-  <li>
-    <h2><a target="_blank" rel="noopener" href="https://github.com/angular/angular-cli/wiki">CLI Documentation</a></h2>
-  </li>
-  <li>
-    <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
-  </li>
-</ul-->
+
+<div class="main-content container-fluid">
+  <div class="row">
+      <div class="col-4 col-lg-4"></div>
+      <div class="col-4 col-lg-4">
+          <p>
+              <ngb-alert [type]="typeTittle" success [dismissible]="false">
+                <strong>Info! Clientes </strong>
+              </ngb-alert>
+          </p>
+      </div>
+      <div class="col-4 col-lg-4"></div>
+  </div>
+
+  <div class="row">
+    <div class="col-12 col-lg-12">
+      <div class="card card-table">
+        <div class="card-header">
+          <div class="title">Motivos</div>
+        </div>
+        <div class="card-body table-responsive">
+          <table class="table table-striped table-borderless">
+            <thead>
+              <tr>
+                <th style="width:40%;">Id</th>
+                <th class="number">Nombre</th>
+                <th style="width:20%;">Estado</th>
+              </tr>
+            </thead>
+            <tbody class="no-border-x">
+                
+              <tr *ngFor="let arch of archives">
+                <td>{{ arch.id }}</td>
+                <td>{{arch.name}}</td>
+                <td [ngClass]="(arch.type == 'CN') ? 'text-danger' : 'text-success'">{{arch.type}}</td>
+                <!--td class="text-danger">Cancelled</td>
+                <td class="text-warning">Pending</td-->
+              </tr>
+              
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div> 
 
 <p>
   <ngb-alert [type]="typeTittle" success [dismissible]="false">
@@ -31,3 +65,4 @@
 <p *ngFor="let arch of archives">
   <ngb-alert [type]="type"  >{{ arch.id }} - {{arch.name}} - {{arch.type}}</ngb-alert>
 </p>
+
